--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,7 +1,7 @@
 defaults: &defaults
   dropbox:
-    app_key: ""
-    secret_key: ""
+    app_key: <%= ENV['DROPBOX_KEY'] %>
+    secret_key: <%= ENV['DROPBOX_SECRET'] %>
 
 development:
   <<: *defaults
