--- a/config/database.yml
+++ b/config/database.yml
@@ -24,5 +24,5 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: 5
-  database: yokul
-  password: <%= ENV['RUBY-GETTING-STARTED_DATABASE_PASSWORD'] %>
+  database: <%= ENV['DATABASE_URL'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
